# contract-mvp

./: .gitignore  Cargo.toml  README.md  build.sh  clean.sh  deploy.sh  dev-deploy.sh  package-lock.json  package.json
.github/workflows/: deploy-staging.yml  test.yml  undeploy-staging.yml
architecture/: protocol_state_machine.drawio
common/: Cargo.toml
common/src/: asset.rs  borrow.rs  fee.rs  lend.rs  lib.rs  market.rs  number.rs  rational.rs  static_yield.rs  supply.rs  util.rs  withdrawal_queue.rs  wrapped_bigdecimal.rs
common/src/market/: configuration.rs  external.rs  impl.rs  mod.rs
contract/market/: Cargo.toml
contract/market/src/: impl_ft_receiver.rs  impl_market_external.rs  lib.rs
contract/market/tests/: happy_path.rs  maximum_borrow_asset_usage_ratio.rs
docs/: liquidation.md  structure.md
examples/: generate_testnet_configuration.rs
mock/ft/: Cargo.toml
mock/ft/src/: lib.rs
scripts/: test.js
src/: api.rs  asset.rs  big_decimal.rs  external.rs  impl_helper.rs  lib.rs  loan.rs  market.rs  oracle.rs  util.rs  vault.rs
test-utils/: Cargo.toml
test-utils/examples/: generate_testnet_configuration.rs
test-utils/src/: lib.rs
tests/: borrow_limits.rs  happy_path.rs  integration.rs  liquidation.rs  maximum_borrow_asset_usage_ratio.rs  maximum_borrow_duration_ms.rs
