[workspace]
resolver = "2"
members = ["common", "contract/*", "mock/*", "test-utils"]

[workspace.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
borsh = { version = "1.5", features = ["unstable__schema"] }
near-sdk = { version = "5.7", features = ["unstable"] }
near-contract-standards = "5.7"
near-workspaces = { version = "0.16", features = ["unstable"] }
primitive-types = { version = "0.10.1" }
rstest = { version = "0.24" }
schemars = { version = "0.8" }
templar-common = { path = "./common" }
test-utils = { path = "./test-utils" }
thiserror = "2.0.11"
tokio = { version = "1.30.0", features = ["full"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
large_futures = "allow"
redundant_closure_for_method_calls = "allow"
module_name_repetitions = "allow"
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
